--- a/accusleepy/gui/primary_window.ui
+++ b/accusleepy/gui/primary_window.ui
@@ -1239,14 +1239,14 @@ color: rgb(244, 195, 68);</string>
                      <number>10</number>
                     </property>
                     <item row="0" column="0">
-                     <layout class="QHBoxLayout" name="top_training_layout" stretch="5,1,3,4,1,5">
+                     <layout class="QHBoxLayout" name="top_training_layout" stretch="2,1,2,1,3,1">
                       <property name="spacing">
                        <number>10</number>
                       </property>
                       <item>
                        <layout class="QHBoxLayout" name="horizontalLayout_5">
                         <property name="spacing">
-                         <number>3</number>
+                         <number>5</number>
                         </property>
                         <item>
                          <widget class="QLabel" name="label">
@@ -1299,7 +1299,7 @@ color: rgb(244, 195, 68);</string>
                        </spacer>
                       </item>
                       <item>
-                       <widget class="QCheckBox" name="calibrate_checkbox">
+                       <widget class="QCheckBox" name="delete_image_box">
                         <property name="sizePolicy">
                          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                           <horstretch>0</horstretch>
@@ -1307,7 +1307,7 @@ color: rgb(244, 195, 68);</string>
                          </sizepolicy>
                         </property>
                         <property name="text">
-                         <string>Calibrate model</string>
+                         <string>Delete images after training</string>
                         </property>
                         <property name="checked">
                          <bool>true</bool>
@@ -1315,55 +1315,7 @@ color: rgb(244, 195, 68);</string>
                        </widget>
                       </item>
                       <item>
-                       <layout class="QHBoxLayout" name="horizontalLayout_84">
-                        <property name="spacing">
-                         <number>3</number>
-                        </property>
-                        <property name="leftMargin">
-                         <number>10</number>
-                        </property>
-                        <item>
-                         <widget class="QLabel" name="calibrate_label">
-                          <property name="sizePolicy">
-                           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                           </sizepolicy>
-                          </property>
-                          <property name="text">
-                           <string>Calibration set size:</string>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="QSpinBox" name="calibration_spinbox">
-                          <property name="sizePolicy">
-                           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                           </sizepolicy>
-                          </property>
-                          <property name="suffix">
-                           <string>%</string>
-                          </property>
-                          <property name="prefix">
-                           <string/>
-                          </property>
-                          <property name="minimum">
-                           <number>10</number>
-                          </property>
-                          <property name="maximum">
-                           <number>50</number>
-                          </property>
-                          <property name="value">
-                           <number>15</number>
-                          </property>
-                         </widget>
-                        </item>
-                       </layout>
-                      </item>
-                      <item>
-                       <spacer name="horizontalSpacer_3">
+                       <spacer name="horizontalSpacer_6">
                         <property name="orientation">
                          <enum>Qt::Orientation::Horizontal</enum>
                         </property>
@@ -1424,14 +1376,30 @@ color: rgb(244, 195, 68);</string>
                         </item>
                        </layout>
                       </item>
+                      <item>
+                       <spacer name="horizontalSpacer_3">
+                        <property name="orientation">
+                         <enum>Qt::Orientation::Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                         <enum>QSizePolicy::Policy::Preferred</enum>
+                        </property>
+                        <property name="sizeHint" stdset="0">
+                         <size>
+                          <width>10</width>
+                          <height>5</height>
+                         </size>
+                        </property>
+                       </spacer>
+                      </item>
                      </layout>
                     </item>
                     <item row="1" column="0">
-                     <layout class="QHBoxLayout" name="bottom_training_layout" stretch="5,5">
+                     <layout class="QHBoxLayout" name="bottom_training_layout" stretch="6,5,3,1,3,1,1">
                       <item>
                        <widget class="QPushButton" name="train_model_button">
                         <property name="sizePolicy">
-                         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                           <horstretch>0</horstretch>
                           <verstretch>0</verstretch>
                          </sizepolicy>
@@ -1456,6 +1424,89 @@ color: rgb(244, 195, 68);</string>
                          <size>
                           <width>10</width>
                           <height>5</height>
+                         </size>
+                        </property>
+                       </spacer>
+                      </item>
+                      <item>
+                       <widget class="QCheckBox" name="calibrate_checkbox">
+                        <property name="sizePolicy">
+                         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                          <horstretch>0</horstretch>
+                          <verstretch>0</verstretch>
+                         </sizepolicy>
+                        </property>
+                        <property name="text">
+                         <string>Calibrate model</string>
+                        </property>
+                        <property name="checked">
+                         <bool>true</bool>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <spacer name="horizontalSpacer_7">
+                        <property name="orientation">
+                         <enum>Qt::Orientation::Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                         <enum>QSizePolicy::Policy::Preferred</enum>
+                        </property>
+                        <property name="sizeHint" stdset="0">
+                         <size>
+                          <width>10</width>
+                          <height>10</height>
+                         </size>
+                        </property>
+                       </spacer>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="calibrate_label">
+                        <property name="sizePolicy">
+                         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                          <horstretch>0</horstretch>
+                          <verstretch>0</verstretch>
+                         </sizepolicy>
+                        </property>
+                        <property name="text">
+                         <string>Calibration set size:</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QSpinBox" name="calibration_spinbox">
+                        <property name="sizePolicy">
+                         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                          <horstretch>0</horstretch>
+                          <verstretch>0</verstretch>
+                         </sizepolicy>
+                        </property>
+                        <property name="suffix">
+                         <string>%</string>
+                        </property>
+                        <property name="minimum">
+                         <number>10</number>
+                        </property>
+                        <property name="maximum">
+                         <number>50</number>
+                        </property>
+                        <property name="value">
+                         <number>15</number>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <spacer name="horizontalSpacer_78">
+                        <property name="orientation">
+                         <enum>Qt::Orientation::Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                         <enum>QSizePolicy::Policy::Preferred</enum>
+                        </property>
+                        <property name="sizeHint" stdset="0">
+                         <size>
+                          <width>10</width>
+                          <height>10</height>
                          </size>
                         </property>
                        </spacer>
@@ -3699,16 +3750,16 @@ color: rgb(244, 195, 68);</string>
                     </property>
                     <property name="text">
                      <string>This is the current set of brain states. Important notes:
-- You must click 'Save settings' for changes to take effect.
+- You must click 'Save settings' to store any changes.
 - Changing these settings can prevent existing label files, calibration files, and trained models from working properly.
 - Reinstalling AccuSleePy will overwrite this configuration.
 
 Each brain state has several attributes:
-- Digit: the indicator for this state in label files, and the keyboard shortcut for this state in manual scoring.
+- Digit: how the brain state is represented in label files, and keyboard shortcut for this state in manual scoring.
 - Enabled: whether a brain state for this digit exists.
 - Name: unique name of the brain state (e.g., REM).
-- Scored: whether a classification model should output this brain state. If a state corresponds to missing/corrupted data, you probably want to uncheck this box.
-- Frequency: approximate relative frequency of this brain state. Does not need to be very accurate. Frequencies for scored states must sum to 1.</string>
+- Scored: whether a classification model should output this brain state. If a state  corresponds to missing/corrupted data, you probably want to uncheck this box.
+- Frequency: approximate relative frequency of this brain state. Does not need to be very accurate. Frequencies for all scored states must sum to 1.</string>
                     </property>
                     <property name="textFormat">
                      <enum>Qt::TextFormat::MarkdownText</enum>
@@ -4061,7 +4112,7 @@ Each brain state has several attributes:
                      <string notr="true">background-color: white;</string>
                     </property>
                     <property name="text">
-                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;These are the default values/settings that are shown in the primary window and manual scoring window when they start up.&lt;/p&gt;&lt;p&gt;Changes here will not affect the **current** state of the controls in the &amp;quot;Sleep scoring&amp;quot; tab.&lt;/p&gt;&lt;p&gt;You must click 'Save settings' for changes to take effect.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;These are the default values/settings that are shown in the primary window and manual scoring window when they start up.&lt;/p&gt;&lt;p&gt;Changes here will not affect the **current** state of the controls in the &amp;quot;Sleep scoring&amp;quot; tab.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                     <property name="textFormat">
                      <enum>Qt::TextFormat::MarkdownText</enum>
@@ -4313,7 +4364,9 @@ Each brain state has several attributes:
                      <string notr="true">background-color: white;</string>
                     </property>
                     <property name="text">
-                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;EMG power is calculated as the root-mean-square of the EMG signal in each epoch after a bandpass filter is applied. You can change the proprties of that filter here. If the manual scoring window displays the EMG signal but not the EMG power, you can try lowering the filter order to 4.&lt;/p&gt;&lt;p&gt;Changing these settings can prevent existing classification models and calibration files from working as expected. You will probably want to recreate them using your new settings.&lt;/p&gt;&lt;p&gt;You must click 'Save settings' for changes to take effect.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                     <string>EMG power is calculated as the root-mean-square of the EMG signal in each epoch after a bandpass filter is applied. You can change the proprties of that filter here. If the manual scoring window displays the EMG signal but not the EMG power, you can try lowering the filter order to 4.
+
+Changing these settings can prevent existing classification models and calibration files from working as expected. You will probably want to recreate them using your new settings.</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
@@ -4562,43 +4615,6 @@ Each brain state has several attributes:
                    </layout>
                   </item>
                   <item>
-                   <layout class="QHBoxLayout" name="horizontalLayout_79">
-                    <item>
-                     <layout class="QHBoxLayout" name="horizontalLayout_85">
-                      <item>
-                       <widget class="QCheckBox" name="delete_image_box">
-                        <property name="sizePolicy">
-                         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                          <horstretch>0</horstretch>
-                          <verstretch>0</verstretch>
-                         </sizepolicy>
-                        </property>
-                        <property name="text">
-                         <string>Delete images after training</string>
-                        </property>
-                        <property name="checked">
-                         <bool>true</bool>
-                        </property>
-                       </widget>
-                      </item>
-                     </layout>
-                    </item>
-                    <item>
-                     <spacer name="horizontalSpacer_93">
-                      <property name="orientation">
-                       <enum>Qt::Orientation::Horizontal</enum>
-                      </property>
-                      <property name="sizeHint" stdset="0">
-                       <size>
-                        <width>40</width>
-                        <height>20</height>
-                       </size>
-                      </property>
-                     </spacer>
-                    </item>
-                   </layout>
-                  </item>
-                  <item>
                    <layout class="QHBoxLayout" name="horizontalLayout_74">
                     <item>
                      <spacer name="horizontalSpacer_86">
@@ -4668,9 +4684,7 @@ Each brain state has several attributes:
 - Batch size: number of examples in each training iteration
 - Learning rate: step size for adjusting model weights
 - Momentum: amount of past gradients to use in the current update. Typically between 0.6 and 0.99
-- Epochs: number of passes over the training data
-
-You can also choose whether to delete images created by the training process once it's finished. This is recommended unless you are debugging the training code.</string>
+- Epochs: number of passes over the training data</string>
                     </property>
                     <property name="textFormat">
                      <enum>Qt::TextFormat::MarkdownText</enum>
